<resources>
    <string name="app_name">TogetUs</string>
    <string name="chatting">채팅</string>
    <string name="player">플레이어</string>
    <string name="user">유저</string>
    <string name="all">전체</string>
    <string name="deal_processing">거래진행</string>
    <string name="deal_end">거래종료</string>
    <string name="home">홈</string>
    <string name="option">옵션</string>
    <string name="alarm_off">알람끄기</string>
    <string name="alarm_on">알람켜기</string>
    <string name="get_block">차단하기</string>
    <string name="get_unblock">차단해제</string>
    <string name="get_report">신고하기</string>
    <string name="chatting_room_exit">채팅방 나가기</string>
    <string name="camera">카메라</string>
    <string name="album">앨범</string>
    <string name="video">동영상</string>
    <string name="no_list_chat">채팅 내역이 존재하지 않아요.</string>
    <string name="request_delivery">동행 요청하기</string>
    <string name="delivery_pay_distance">직선거리</string>
    <string name="delivery_pay_weight">무게</string>
    <string name="delivery_pay_base_fee">기본 요금</string>
    <string name="delivery_pay_total_fee">총 결제 금액</string>
</resources>
